<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh_desktop"
        android:title="@string/action_refresh_desktop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_accounts"
        android:title="@string/action_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_session_settings"
        android:title="@string/action_session_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_note"
        android:title="@string/action_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
